--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "crypto-js": "^3.3.0",
     "events": "^3.1.0",
+    "sip.js": "https://github.com/alexkoles/SIP.js.git#master",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
