--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "OnSIP <developer@onsip.com> (https://sipjs.com/aboutus/)",
   "contributors": [
     {
-      "url": "https://github.com/onsip/SIP.js/blob/master/THANKS.md"
+      "url": "https://github.com/alexkoles/SIP.js/blob/master/THANKS.md"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/onsip/SIP.js.git"
+    "url": "https://github.com/alexkoles/SIP.js"
   },
   "keywords": [
     "sip",
